# SimpleFaceRecognition

./: CMakeLists.txt  README.md  build.ps1  build.sh
include/: face_detection.h  face_manager.h  face_recognition.h  recognition_engine.h  utils.h
src/: face_detection.cpp  face_manager.cpp  face_recognition.cpp  main.cpp  recognition_engine.cpp  utils.cpp
